<resources>
    <string name="app_name">Calculator Lab 3</string>
    <string name="button_mc">MC</string>
    <string name="button_mr">MR</string>
    <string name="button_ms">MS</string>
    <string name="button_m_add">M+</string>
    <string name="button_m_subtract">M-</string>
    <string name="button_backspace_delete">←</string>
    <string name="button_clear_entry">CE</string>
    <string name="button_clear">C</string>
    <string name="button_sign_change">±</string>
    <string name="button_square_root">√</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_division">/</string>
    <string name="button_percentage">%</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_multiplication">*</string>
    <string name="button_reciprocal">1/x</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_subtraction">-</string>
    <string name="button_equals">=</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_addition">+</string>

</resources>