<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@color/layout_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:gravity="center|right"
        android:textColor="#000000"
        android:textSize="30sp"
        android:background="@color/button_ce_c_background"/>

    <LinearLayout
        android:id="@+id/calculator_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="3dp"
        android:weightSum="5">

        <Button
            android:id="@+id/buttonMC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_mc"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/buttonMR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_mr"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonMS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_ms"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonMemoryAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_m_add"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonMemorySubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_m_subtract"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

    </LinearLayout>
    <!-- Row 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/buttonBackspaceDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_backspace_delete"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_ce_c_background"
            android:textColor="@color/buttons_not_numbers_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonClearEntry"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_clear_entry"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_ce_c_background"
            android:textColor="@color/buttons_not_numbers_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_clear"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_ce_c_background"
            android:textColor="@color/buttons_not_numbers_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonSignChange"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_sign_change"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonSquareRoot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_square_root"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

    </LinearLayout>

    <!--  Row 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_7"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_8"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_9"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_division"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonPercentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_percentage"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

    </LinearLayout>

    <!-- Row 4 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_4"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_5"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_6"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_multiplication"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonReciprocal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/button_reciprocal"
            android:onClick="onButtonClick"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/button_text"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"
                    android:text="@string/button_1"
                    android:backgroundTint="@color/button_background"
                    android:textColor="@color/button_text"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"
                    android:text="@string/button_2"
                    android:backgroundTint="@color/button_background"
                    android:textColor="@color/button_text"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"
                    android:text="@string/button_0"
                    android:backgroundTint="@color/button_background"
                    android:textColor="@color/button_text"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/button_3"
                            android:layout_weight="1"
                            android:onClick="onButtonClick"
                            android:backgroundTint="@color/button_background"
                            android:textColor="@color/button_text"
                            android:layout_gravity="center"/>

                        <Button
                            android:id="@+id/buttonSubtraction"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/button_subtraction"
                            android:layout_weight="1"
                            android:onClick="onButtonClick"
                            android:backgroundTint="@color/button_background"
                            android:textColor="@color/button_text"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonDot"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onButtonClick"
                            android:text="@string/button_dot"
                            android:backgroundTint="@color/button_ce_c_background"
                            android:textColor="@color/buttons_not_numbers_text"
                            android:layout_gravity="center"/>
                        <Button
                            android:id="@+id/buttonAddition"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="onButtonClick"
                            android:text="@string/button_addition"
                            android:backgroundTint="@color/button_background"
                            android:textColor="@color/button_text"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonEquals"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="onButtonClick"
                        android:text="@string/button_equals"
                        android:backgroundTint="@color/button_equal_background"
                        android:textColor="@color/buttons_not_numbers_text"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
